Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-965

[C++] FIXED_LEN_BYTE_ARRAY types are unhandled in the Arrow reader

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • cpp-1.1.0
    • parquet-cpp
    • None

    Description

      Currently, a dynamic_cast to a ByteArrayType reader is failing, resulting in a segfault. We should check the Parquet column type and use either a BYTE_ARRAY path or FIXED_LEN_BYTE_ARRAY path.

      Attachments

        Issue Links

          Activity

            People

              advancedxy YE
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: