PARQUET-965: Add  FIXED_LEN_BYTE_ARRAY read and write support in parquet-arrow

The decimal support is left for further commits.

This may also helps ARROW-901

Author: Xianjin YE <advancedxy@gmail.com>

Closes #315 from advancedxy/PARQUET-965 and squashes the following commits:

402b059 [Xianjin YE] Rewording some comments and minor fix to avoid realloc in Resize
30f3705 [Xianjin YE] Fix FLBA to fixed_size_binary schema convert test failure.
e48a5f5 [Xianjin YE] Add support for FIXED_LEN_BYTE_ARRAY read and write support in parquet-arrow.

Change-Id: I0838834ba78473b79409f6ebb6c902bceef7d37f